<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyGroup</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="netid">Your Netid</string>
    <string name="login_password">Your Password Here</string>
    <string name="login_button">Press To Log In</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="currLocBtn">Set Location</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="addClassBtn">Add</string>
    <string name="delClassBtn">Delete</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="delCurrLocBtn">Delete</string>
    <string name="title_activity_list_view_adapter">ListViewAdapter</string>

</resources>